pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidTypeName2.pkl
local x = new {
  y = import("pkl:base")
}
listing = new x.y.Listing {}
